#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.6       ??-??-03
#############################################################################

  CHANGES THAT AFFECT USERS:
  * Now include support for chain IDs and other optional fields in PQR/PDB
    files
  * Added support for parsing PDB files
  * Fixed omission of srfm in sections of  documentation (thanks to Sameer 
    Varma)
  * Made autoconf/automake configure setup more robust on Solaris 8 platforms
    (thanks to Ben Carrington)
  * Renamed:
      amber2charmm -> amber2charmm.sh
      pdb2pqr -> pdb2pqr.awk
      qcd2pqr -> qcd2pqr.awk

  CHANGES THAT AFFECT DEVELOPERS:
  * Updated documentation
  * Changes to Valist and Vatom classes
  * Fixed minor bugs in documentation formatting
  * Made Vopot more robust
  * Created Vparam class for parameter file parsing
  * Added vparam* parameter database flat files to tools/conversion/param
 
#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.6       01-17-03
#############################################################################
 
  * Changed license to GPL 
  * Made a few routines compliant with ANSI X3.159-1989 by 
	removing snprintf (compliant with ISO/IEC 9899:1999).  This is basically
    for the sake of OSF support.


#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.5       11-21-02
#############################################################################

  * Improved consistency between energies evaluated with "chgm 0" and "chgm 1"
  * Made charge-field energy evaluation consistent for user-supplied charge
    maps
  * Added new psize.py script courtesy of Todd Dolinsky.
  * Updated list of APBS-related tools in User Guide.
  * Added RPM capabilities courtesy of Steve Bond.
  * Removed annoying excess verbosity from Vgrid.